# plutus-contract-model-examples

./: .gitignore  README.md  cabal.project  plutus-contract-model-examples.cabal
src/Escrow/: Emulator.hs  OffChain.hs  OnChain.hs
src/GuessGame/: Game.hs
src/GuessGameV2/: Emulator.hs  OffChain.hs  OnChain.hs
test/: Spec.hs
test/Spec/: Escrow.hs  GuessGameV1.hs  GuessGameV2.hs
